Modify test